# musicmixxer

./: .gitignore  README.md  docker-compose.yml  example.txt  package-lock copy.json  package.json  tsconfig.json
backend/: .env  Dockerfile  db.sqlite3  manage.py  pyproject.toml
backend/apps/imports/: apps.py  tests.py
backend/apps/imports/api/: routes.py
backend/apps/imports/domain/: normalizer.py  services.py  utils.py  validator.py
backend/apps/integrations/: apps.py
backend/apps/integrations/spotify/: client.py  tests_client.py  tests_unit.py
backend/apps/playlists/: models.py  tests.py  tests_export.py  tests_spotify_routes.py
backend/apps/playlists/api/: routes.py
backend/apps/playlists/domain/: organization_service.py  spotify_export_service.py  spotify_import_service.py
backend/apps/playlists/migrations/: 0001_initial.py  0002_initial.py  0002_remove_playlistitem_song_id_playlist_spotify_id_and_more.py
backend/apps/tracks/: models.py  tests.py
backend/apps/tracks/services/: __init__.py  (+4 more)
backend/apps/users/: adapters.py  api.py  auth.py  auth_views.py  models.py  schemas.py  serializers.py  services.py  tests.py
backend/config/: settings.py  urls.py
backend/config/api/: api.py  views.py
backend/musicmixxer/: .env  .gitignore  CONTRIBUTORS.txt  LICENSE  README.md  docker-compose.docs.yml  manage.py  pyproject.toml
backend/musicmixxer/config/: api_router.py  asgi.py  celery_app.py  urls.py  wsgi.py
backend/musicmixxer/docs/: Makefile  conf.py  howto.rst  index.rst  make.bat  users.rst
backend/musicmixxer/musicmixxer/: conftest.py
(+78 files in other folders)
